Deployments/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modular-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: modular-platform
  template:
    metadata:
      labels:
        app: modular-platform
    spec:
      containers:
        - name: api
          image: modular-platform-registry/modular-platform-api:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
