Deployments/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modular-platform
spec:
  selector:
    app: modular-platform
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
